--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     height:100vh;
     width:100vw;
+    background-color: #716e6e;
 }
 
 button {
@@ -8,9 +9,18 @@ button {
     width: 25%;
     font-size: 30px;
 }
-
+.background {
+    position: relative;
+    top: 10px;
+}
+.background > img {
+    height:600px;
+}
 .calculator {
-    display:inline-block;
+    display: inline-block;
+    position: absolute;
+    top: 76px;
+    left: 196px;
 }
 
 .equal{
@@ -24,13 +34,13 @@ button {
 }
 
 .row{
-    height: 80px;
-    width: 300px;
+    height: 71px;
+    width: 268px;
 }
 
 .row:first-child{
-    height:110px;
-    width:303px;
+    height: 112px;
+    width: 271px;
 }
 
 .row:nth-child(2) button{
